# fallible

./: Cargo.toml  README.md  cspell.json
src/: lib.rs  local_fs_facade.rs  s3_facade.rs  storage_facade.rs
tests/: s3_facade_tests.rs
